<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:background="@color/colorXanhNgocBichXam">

        <ImageView
            android:id="@+id/imgHamburger"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10"
            android:layout_marginRight="@dimen/size_30"
            android:background="@mipmap/ic_hamburger_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/imgHamburger"
            android:text="@string/text_actionbar"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_10"
            android:layout_toLeftOf="@+id/imgDiemThuong"
            android:background="@mipmap/ic_search_white" />

        <ImageView
            android:id="@+id/imgDiemThuong"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/layoutCart"
            android:background="@drawable/ic_alarm_on_white_48dp" />

        <RelativeLayout
            android:id="@+id/layoutCart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_10">

            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:background="@mipmap/ic_cart_white" />

            <TextView
                android:id="@+id/txtCartNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="8dp"
                android:textColor="@color/colorDoTuoi"
                android:textSize="@dimen/text_12" />
        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/diachi_giaohang"
        android:textColor="@color/colorDen"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginRight="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_while_edittext"
            android:hint="@string/ho_ten"
            android:maxLength="50"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_while_edittext"
            android:hint="@string/w04_email"
            android:maxLength="50"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtSDT"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_while_edittext"
            android:hint="@string/sdt"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtDiaChi"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_while_edittext"
            android:hint="@string/dia_chi"
            android:maxLength="250"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtGhiChu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg_while_edittext"
            android:hint="@string/ghichu"
            android:maxLength="250" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtDatHang"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:maxWidth="400dp"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginRight="@dimen/size_15"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/bg_button_cam"
        android:gravity="center"
        android:text="@string/dathang"
        android:textColor="@color/colorDen"
        android:textSize="@dimen/text_18" />

</LinearLayout>