<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:background="@color/colorXanhNgocBichXam"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_15"
            android:src="@mipmap/w03_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/w09_title"
            android:textColor="@color/colorTrang"
            android:textSize="@dimen/text_16" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lineTong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTrang"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtMatKhauCu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/size_15"
            android:layout_marginRight="@dimen/size_15"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/bg_edittext_pass"
            android:hint="@string/w09_hint_passOld"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/size_15"
            android:layout_marginRight="@dimen/size_15"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/bg_edittext_pass"
            android:hint="@string/w09_hint_passNew"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtNhapLaiMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/size_15"
            android:layout_marginRight="@dimen/size_15"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/bg_edittext_pass"
            android:hint="@string/w09_hint_passNew2"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true" />


        <TextView
            android:id="@+id/txtXacNhan"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:maxWidth="400dp"
            android:layout_marginLeft="@dimen/size_15"
            android:layout_marginRight="@dimen/size_15"
            android:layout_marginTop="@dimen/size_30"
            android:background="@drawable/bg_btn_thamquan_radius"
            android:gravity="center"
            android:text="@string/w03_xacnhan"
            android:textColor="@color/colorTrang"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

</LinearLayout>